# anchor-interface

./: Cargo.toml  LICENSE.txt  README.md
examples/jupiter-interface/: Cargo.toml  build.rs  jupiter.json  jupiter.rs
examples/jupiter-interface/src/: _gen_.rs  lib.rs
examples/psy-american-interface/: Cargo.toml  build.rs  psy_american.json  psy_american.rs
examples/psy-american-interface/src/: lib.rs
examples/ratex-interface/: Cargo.toml  ratex.json
examples/ratex-interface/src/: _gen_.rs  lib.rs
examples/whirlpool-interface/: Cargo.toml  build.rs  whirlpool.json  whirlpool.rs
examples/whirlpool-interface/src/: .gitignore  _gen_.rs  lib.rs  pda.rs
generator/: Cargo.toml  README.md
generator/src/: lib.rs
interface/: Cargo.toml  README.md
interface/src/: account.rs  errors.rs  lib.rs
syn/: Cargo.toml
syn/src/: accounts.rs  common.rs  errors.rs  exports.rs  instructions.rs  lib.rs  macros.rs  typedefs.rs  types.rs
