[package]
name = "anchor-interface-gen"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-interface-syn = { path = "../syn" }
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"

[lib]
proc-macro = true
