[package]
name = "anchor-interface-gen"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-interface-syn = { path = "../syn" }
darling = "0.20"
syn = { version = "2", features = ["full"] }

[lib]
proc-macro = true
