[package]
name = "anchor-interface-syn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-syn = { version = "0.25", features = ["idl", "hash"] }
darling = "0.14"
heck = "0.4"
proc-macro2 = "1"
rust-format = { version = "0.3" }
quote = "1"
serde_json = "1"
syn = { version = "1", features = ["full"] }
