[package]
name = "anchor-interface-syn"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang-idl = { version = "0.1", features = ["convert"]}
darling = "0.20"
heck = "0.5"
proc-macro2 = "1"
rust-format = { version = "0.3", features = ["pretty_please", "token_stream"] }
quote = "1"
serde_json = "1"
syn = { version = "2", features = ["full"] }
typed-builder = "0.21"
