[package]
name = "jupiter-interface"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = ["gen-file"]
test-bpf = []
gen-file = []

[dependencies]
anchor-interface = { path = "../../interface" }
anchor-interface-gen = { path = "../../generator" }
borsh = "0.9.3"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1"
solana-program = "1.10"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = "1"

[dev-dependencies]
assert_matches = "1.4.0"
solana-logger = "1.10"
solana-program-test = "1.10"
solana-sdk = "1.10"
tokio = "1"

[lib]
crate-type = ["cdylib", "lib"]
