[package]
name = "ratex-interface"
version = "1.0.0"
edition = "2021"
publish = false

[features]
default = ["gen-file"]
test-bpf = []
gen-file = []

[dependencies]
anchor-interface = { path = "../../interface" }
anchor-interface-gen = { path = "../../generator" }
borsh = "1"
bytemuck = { version = "1.7.3", features = ["extern_crate_std", "min_const_generics"] }
num-derive = "0.4"
num-traits = "0.2"
rust_decimal = "1.33.1"
solana-program = "1.10"
thiserror = "1"
uint = "0.9"

[lib]
crate-type = ["cdylib", "lib"]
