[package]
name = "whirlpool-interface"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = ["gen-file"]
test-bpf = []
gen-file = []

[dependencies]
anchor-interface = { path = "../../interface" }
anchor-interface-gen = { path = "../../generator" }
borsh = "0.9.3"
bytemuck = { version = "1.7.3", features = ["extern_crate_std", "min_const_generics"] }
num-derive = "0.3"
num-traits = "0.2"
solana-program = " 1.10"
thiserror = "1"
uint = "0.9"

[lib]
crate-type = ["cdylib", "lib"]